; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/drbd/extr_drbd_main.c_drbd_send_rs_deallocated.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/drbd/extr_drbd_main.c_drbd_send_rs_deallocated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drbd_peer_device = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { %struct.drbd_socket }
%struct.drbd_socket = type { i32 }
%struct.drbd_peer_request = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }
%struct.p_block_desc = type { i64, i32, i32 }

@EIO = common dso_local global i32 0, align 4
@P_RS_DEALLOCATED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @drbd_send_rs_deallocated(%struct.drbd_peer_device* %0, %struct.drbd_peer_request* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.drbd_peer_device*, align 8
  %5 = alloca %struct.drbd_peer_request*, align 8
  %6 = alloca %struct.drbd_socket*, align 8
  %7 = alloca %struct.p_block_desc*, align 8
  store %struct.drbd_peer_device* %0, %struct.drbd_peer_device** %4, align 8
  store %struct.drbd_peer_request* %1, %struct.drbd_peer_request** %5, align 8
  %8 = load %struct.drbd_peer_device*, %struct.drbd_peer_device** %4, align 8
  %9 = getelementptr inbounds %struct.drbd_peer_device, %struct.drbd_peer_device* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  store %struct.drbd_socket* %11, %struct.drbd_socket** %6, align 8
  %12 = load %struct.drbd_peer_device*, %struct.drbd_peer_device** %4, align 8
  %13 = load %struct.drbd_socket*, %struct.drbd_socket** %6, align 8
  %14 = call %struct.p_block_desc* @drbd_prepare_command(%struct.drbd_peer_device* %12, %struct.drbd_socket* %13)
  store %struct.p_block_desc* %14, %struct.p_block_desc** %7, align 8
  %15 = load %struct.p_block_desc*, %struct.p_block_desc** %7, align 8
  %16 = icmp ne %struct.p_block_desc* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %2
  %18 = load i32, i32* @EIO, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %3, align 4
  br label %41

20:                                               ; preds = %2
  %21 = load %struct.drbd_peer_request*, %struct.drbd_peer_request** %5, align 8
  %22 = getelementptr inbounds %struct.drbd_peer_request, %struct.drbd_peer_request* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @cpu_to_be64(i32 %24)
  %26 = load %struct.p_block_desc*, %struct.p_block_desc** %7, align 8
  %27 = getelementptr inbounds %struct.p_block_desc, %struct.p_block_desc* %26, i32 0, i32 2
  store i32 %25, i32* %27, align 4
  %28 = load %struct.drbd_peer_request*, %struct.drbd_peer_request** %5, align 8
  %29 = getelementptr inbounds %struct.drbd_peer_request, %struct.drbd_peer_request* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @cpu_to_be32(i32 %31)
  %33 = load %struct.p_block_desc*, %struct.p_block_desc** %7, align 8
  %34 = getelementptr inbounds %struct.p_block_desc, %struct.p_block_desc* %33, i32 0, i32 1
  store i32 %32, i32* %34, align 8
  %35 = load %struct.p_block_desc*, %struct.p_block_desc** %7, align 8
  %36 = getelementptr inbounds %struct.p_block_desc, %struct.p_block_desc* %35, i32 0, i32 0
  store i64 0, i64* %36, align 8
  %37 = load %struct.drbd_peer_device*, %struct.drbd_peer_device** %4, align 8
  %38 = load %struct.drbd_socket*, %struct.drbd_socket** %6, align 8
  %39 = load i32, i32* @P_RS_DEALLOCATED, align 4
  %40 = call i32 @drbd_send_command(%struct.drbd_peer_device* %37, %struct.drbd_socket* %38, i32 %39, i32 16, i32* null, i32 0)
  store i32 %40, i32* %3, align 4
  br label %41

41:                                               ; preds = %20, %17
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local %struct.p_block_desc* @drbd_prepare_command(%struct.drbd_peer_device*, %struct.drbd_socket*) #1

declare dso_local i32 @cpu_to_be64(i32) #1

declare dso_local i32 @cpu_to_be32(i32) #1

declare dso_local i32 @drbd_send_command(%struct.drbd_peer_device*, %struct.drbd_socket*, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
